--- a/config.dev.yaml
+++ b/config.dev.yaml
@@ -4,8 +4,9 @@ server:
   port: 8080
 datasource: 
   host: localhost
-  user: lucasdesouza
-  dbname: lucasdesouza
+  user: local
+  password: passwordnot
+  dbname: local
   port: 5432
   sslmode: disable
   timeZone: US/Central
