--- a/config.prod.yaml
+++ b/config.prod.yaml
@@ -3,10 +3,10 @@ server:
   host: 0.0.0.0
   port: 8080
 datasource: 
-  host: localhost
-  user: lucasdesouza
-  password: password
-  dbname: local
+  host: postgres-cluster-ip-service
+  user: postgres
+  password: SECRET_PGPASSWORD
+  dbname: postgres
   port: 5432
   sslmode: disable
   timeZone: US/Central
